# tapehead

./: Cargo.toml  README.md
src/: app.rs  app_command.rs  cli.rs  main.rs  preset.rs
src/audio/: loader.rs  mod.rs  source.rs
src/audio/effects/: dropout.rs  mod.rs  saturation.rs  wow_flutter.rs
src/audio/engine/: deck.rs  mod.rs
src/gui/: mod.rs
