[package]
name = "tapehead"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
ribir = "0.3.0"
symphonia = "0.5.5"
anyhow = "1.0.86"
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["full"] }
cpal = "0.15.3"
crossbeam-channel = "0.5.13"
rubato = "2.0.0"
audioadapter = "3.0.0"
audioadapter-buffers = "3.0.0"
rand = "0.10.1"
serde = { version = "1.0.203", features = ["derive"] }
toml = "0.8.14"
hound = "3.5.1"
egui = "0.27.2"
eframe = "0.27.2"
rfd = "0.14.1"
